lupdate: Protect id when writing ts files

Escapes characters that need be in XML.

Fixes: QTBUG-112677
Change-Id: Ie2e57ca30f953a684ea8991537873d60a31a37c8
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 5859c5b4acb70b8796817e49fa20e121898f9ad2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>